--- a/config/routes.yml
+++ b/config/routes.yml
@@ -1,22 +1,27 @@
 ## Routes
 ---
-/:                     { controller: default, action: index }
+/:                                     { controller: default, action: index }
 
-/login:                { controller: auth, action: login }
-/login/*:              { controller: auth, action: login-with, args: [ $2 ] }
-/logout:               { controller: auth, action: logout, auth: user }
-/signup:               { controller: auth, action: signup }
-/signup/confirm/*:     { controller: auth, action: confirm, args: [ $3 ] }
-/send-password:        { controller: auth, action: send-password }
-/forgot-password:      { controller: auth, action: forgot-password }
-/reset-password/*:     { controller: auth, action: reset-password, args: [ $2 ] }
-/change-password:      { controller: auth, action: change-password, auth: user }
+/signup:                               { controller: signup, action: signup, authz: guest }
+/signup/confirm:                       { controller: signup, action: confirm }
 
-/about:                { controller: default, action: page, args: [ $1 ] }
-/term:                 { controller: default, action: page, args: [ $1 ] }
+/login:                                { controller: auth, action: login, authz: guest }
+/login/*:                              { controller: auth, action: login-with, args: [ $2 ], authz: guest }
+/logout:                               { controller: auth, action: logout, authz: user }
+/forgot-password:                      { controller: auth, action: forgot-password, authz: guest }
+/reset-password +GET:                  { controller: auth, action: show-reset-password, authz: guest }
+/reset-password +POST:                 { controller: auth, action: reset-password, authz: guest }
+
+/settings +GET:                        { controller: user, action: show-edit, authz: user }
+/settings +POST:                       { controller: user, action: edit, authz: user }
+/settings/edit-password +GET:          { controller: user, action: show-edit-password, authz: user }
+/settings/edit-password +POST:         { controller: user, action: edit-password, authz: user }
+/settings/delete +POST:                { controller: user, action: delete, authz: user }
+/good-bye:                             { controller: user, action: good-bye, authz: guest }
+
+/about:                                { controller: default, action: page, args: [ $1 ] }
+/terms:                                { controller: default, action: page, args: [ $1 ] }
 /contact:              { controller: default, action: contact }
-
-/*/**:                 { controller: $1, action: ~ $REQUEST_METHOD ~ abc ~ $2|index ~, args: [ $3... ] }
 
 401:                   { controller: auth, action: login-required }
 403:                   { controller: error, action: forbidden }
